--- a/estmara.html
+++ b/estmara.html
@@ -5,7 +5,7 @@
    
    
 
-    <title>استمارة الانضمام</title>
+    <title> كاغو الافضل</title>
 
     <link rel="stylesheet" href="Es.css">
   </head>
