--- a/estmara.html
+++ b/estmara.html
@@ -5,7 +5,7 @@
    
    
 
-    <title> كاغو الافضل</title>
+    <title> استمارة الانضمام</title>
 
     <link rel="stylesheet" href="Es.css">
   </head>
@@ -32,7 +32,7 @@
 
 
   
-   <h1 id="head"> استمارة الانضمام </h1>
+   <h1 id="head">  كاغو الافضل </h1>
     
 
 
