--- a/estmara.html
+++ b/estmara.html
@@ -218,11 +218,11 @@
 <br>
 
 <input type="checkbox" id="f" name="entry.1369727920" value="رسام">
-<label for="f"> رسام (يشمل هذا الخيار الرسم بكل أنواعه, ورقي, إٍلكتروني, ثنائي/ثلاثي الأبعاد) </label>
+<label for="f"> رسام (يشمل هذا الخيار الرسم بكل أنواعه, ورقي, إلكتروني, ثنائي/ثلاثي الأبعاد) </label>
 <br>
 
 <input type="checkbox" id="g" name="entry.1369727920" value="انميتر">
-<label for="g"> انميتر (إنشاء الانيمشين) </label>
+<label for="g"> انميتر (تحريك الرسومات) </label>
 <br>
 
 <input type="checkbox" id="h" name="entry.1369727920" value="مونتاج">
@@ -230,7 +230,7 @@
 <br>
 
 <input type="checkbox" id="i" name="entry.1369727920" value="مدقق لغوي" >
-<label for="i"> مدقق لغوي (اللغة العربية أو الإٍنجليزية) </label>
+<label for="i"> مدقق لغوي (اللغة العربية أو الإنجليزية) </label>
 <br>
 
 <input type="checkbox" id="j" name="entry.1369727920" value="معلق صوتي">
@@ -238,7 +238,7 @@
 <br>
 
 <input type="checkbox" id="k" name="entry.1369727920" value="مونتاج صوتي">
-<label for="k">   مونتاج صوتي ( منتجة الأصوات)</label>
+<label for="k">   مونتاج صوتي (منتجة الأصوات)</label>
 <br>
 
 <input type="checkbox" id="l" name="entry.1369727920" value="لا شيء محدد">
@@ -279,7 +279,7 @@
 <br>
 
 <input type="checkbox" id="g2" name="entry.804722101" value="انميتر">
-<label for="g2"> انميتر إنشاء الإٍنيمشين) </label>
+<label for="g2"> انميتر (تحريك الرسومات)  </label>
 <br>
 
 <input type="checkbox" id="h2" name="entry.804722101" value="مونتاج">
@@ -287,7 +287,7 @@
 <br>
 
 <input type="checkbox" id="i2" name="entry.804722101" value="مدقق لغوي">
-<label for="i2">  مدقق لغوي (اللغة العربية أو الإٍنجليزية) </label>
+<label for="i2">  مدقق لغوي (اللغة العربية أو الإنجليزية) </label>
 <br>
 
 <input type="checkbox" id="j2" name="entry.804722101" value="معلق صوتي">
@@ -304,6 +304,7 @@
 
 
 </section>
+
 
 <section> <!--11 انضممت لفريق  -->
   <p>  هل انضممت لفريق من قبل؟   </p>
