--- a/estmara.html
+++ b/estmara.html
@@ -299,7 +299,7 @@
 <br>
 
 <input type="checkbox" id="l2" name="entry.804722101" value="التركيز على مواهبي">
-<label for="l2"> أرغب بالتركيز على مواهبي السابقة وتطويرها اأكثر. </label>
+<label for="l2"> أرغب بالتركيز على مواهبي السابقة وتطويرها أكثر. </label>
 <br>
 
 
