--- a/estmara.html
+++ b/estmara.html
@@ -201,12 +201,12 @@
     <br>
 
     <input type="checkbox" id="b" name="entry.1369727920" value="مصمم" >
-    <label for="b"> مصمم (أغلفة, واجهات, تنسيق الحسابات, أي شيء له علاقة بالتصميم) </label>
+    <label for="b"> مصمم (أغلفة, واجهات, تنسيق الحسابات...) </label>
    <br>
 
    
    <input type="checkbox" id="c" name="entry.1369727920"  value="مبرمج">
-   <label for="c"> مبرمج (يشمل هذا الخيار مطور البرمجيات أيضا) </label>
+   <label for="c"> مبرمج (يشمل مطور البرمجيات أيضا) </label>
   <br>
 
   <input type="checkbox" id="d" name="entry.1369727920" value="مترجم">
@@ -214,11 +214,11 @@
  <br>
 
  <input type="checkbox" id="e" name="entry.1369727920" value="ناقد" >
- <label for="e"> ناقد (يشمل هذا النقد سواء: كتابة, رسم, تصميم...) </label>
+ <label for="e"> ناقد (كتابة, رسم, تصميم...) </label>
 <br>
 
 <input type="checkbox" id="f" name="entry.1369727920" value="رسام">
-<label for="f"> رسام (يشمل هذا الخيار الرسم بكل أنواعه, ورقي, إلكتروني, ثنائي/ثلاثي الأبعاد) </label>
+<label for="f"> رسام (ورقي, إلكتروني, ثنائي/ثلاثي الأبعاد) </label>
 <br>
 
 <input type="checkbox" id="g" name="entry.1369727920" value="انميتر">
@@ -226,7 +226,7 @@
 <br>
 
 <input type="checkbox" id="h" name="entry.1369727920" value="مونتاج">
-<label for="h"> مونتاج (منتجة مقاطع الفيديو) </label>
+<label for="h">  منتجة مقاطع الفيديو </label>
 <br>
 
 <input type="checkbox" id="i" name="entry.1369727920" value="مدقق لغوي" >
@@ -238,7 +238,7 @@
 <br>
 
 <input type="checkbox" id="k" name="entry.1369727920" value="مونتاج صوتي">
-<label for="k">   مونتاج صوتي (منتجة الأصوات)</label>
+<label for="k">منتجة الاصوات</label>
 <br>
 
 <input type="checkbox" id="l" name="entry.1369727920" value="لا شيء محدد">
@@ -258,12 +258,12 @@
     <br>
 
     <input type="checkbox" id="b2" name="entry.804722101" value="مصمم">
-    <label for="b2"> مصمم (أغلفة, واجهات, تنسيق الحسابات, أي شيء له علاقة بالتصميم) </label>
+    <label for="b2"> مصمم (أغلفة, واجهات, تنسيق الحسابات...) </label>
    <br>
 
    
    <input type="checkbox" id="c2" name="entry.804722101" value="مبرمج">
-   <label for="c2"> مبرمج (يشمل هذا الخيار مطور البرمجيات أيضا) </label>
+   <label for="c2"> مبرمج (يشمل مطور البرمجيات أيضا) </label>
   <br>
 
   <input type="checkbox" id="d2" name="entry.804722101" value="مترجم">
@@ -271,19 +271,19 @@
  <br>
 
  <input type="checkbox" id="e2" name="entry.804722101" value="ناقد">
- <label for="e2"> ناقد (يشمل هذا النقد سواء: كتابة, رسم, تصميم...) </label>
+ <label for="e2"> ناقد (كتابة, رسم, تصميم...) </label>
 <br>
 
 <input type="checkbox" id="f2" name="entry.804722101" value="رسام">
-<label for="f2">رسام (يشمل هذا الخيار الرسم بكل أنواعه, ورقي, إلكتروني, ثنائي/ثلاثي الأبعاد) </label>
+<label for="f2">رسام (ورقي, إلكتروني, ثنائي/ثلاثي الأبعاد) </label>
 <br>
 
 <input type="checkbox" id="g2" name="entry.804722101" value="انميتر">
-<label for="g2"> انميتر (تحريك الرسومات)  </label>
+<label for="g2"> انميتر (تحريك الرسومات) </label>
 <br>
 
 <input type="checkbox" id="h2" name="entry.804722101" value="مونتاج">
-<label for="h2">  مونتاج (منتجة مقاطع الفيديو) </label>
+<label for="h2"> منتجة مقاطع الفيديو </label>
 <br>
 
 <input type="checkbox" id="i2" name="entry.804722101" value="مدقق لغوي">
@@ -295,7 +295,7 @@
 <br>
 
 <input type="checkbox" id="k2" name="entry.804722101" value="مونتاج صوتي">
-<label for="k2">  مونتاج صوتي ( منتجة الاصوات)</label>
+<label for="k2">منتجة الاصوات</label>
 <br>
 
 <input type="checkbox" id="l2" name="entry.804722101" value="التركيز على مواهبي">
